--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section data-cy="hw1-section-main-pre">
       <!-- 1) В этом разделе создай 3 дочерних элемента: -->
-      <h1>TEN MIRON</h1>
+      <h1>Тен Мирон</h1>
       <p>
         Возраст: мне 27 лет <br />Деятельность: я СНГ юрист, почти в прошлом
         <br />Хобби: увлекаюсь гидропоническими фермами, фронтенд разработкой
